user/app/src/main/resources/kube/kube-user-ns.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: example
  labels:
    name: example
    app: example
