user/app/src/main/resources/kube/kube-user-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: user
  namespace: example
  labels:
    name: example
    app: example
spec:
  backend:
    serviceName: user
    servicePort: 8080
